# sock_trigger_cmd

./: Cargo.toml  README.md
installation_helpers/: sock_trigger_cmd.service
src/: main.rs  run_cmd.rs  util.rs
