[package]
name = "sock_trigger_cmd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

log = "0.4"
#simplelog = {version = "0.12", default-features = false}

shlex = "1.1.0"
crossbeam-utils = "0.8.11"
flexi_logger = { version = "0.22.5", default-features = false, features = ["syslog_writer"]}
nix = { version = "0.24.2", default-features = false, features = ["user"] }
