[package]
name = "sock_trigger_cmd"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

log = "0.4"
flexi_logger = { version = "0.23", default-features = false, features = ["syslog_writer"]}

shlex = "1.1.0"
nix = { version = "0.25", default-features = false, features = ["fs", "user"] }

[dependencies.tokio]
version = "1.21.1"
features = ["rt-multi-thread", "net", "io-util", "process", "sync", "signal", "macros"]
